[package]
name = "advent-of-code-2022"
version = "0.1.0"
authors = ["Alex King <alex.aquus@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc_lib"
path = "src/lib/main.rs"

[[bin]]
name = "aoc_bin"
path = "src/bin/main.rs"

[dependencies]
